--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-01.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-01.md
@@ -13,7 +13,7 @@ author: RYAN DEFFENBAUGH
 
 
 **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) is the [IBD Stock of the Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) for Friday. Shares jumped after the tech behemoth published stronger-than-expected earnings and revenue for the third quarter late Thursday.  
-**亚马逊** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 是周五[的 IBD 股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)。周四晚些时候，这家科技巨头公布了强于预期的第三季度收益和收入，此后股价上涨。
+**亚马逊** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 是周五的 [IBD 每日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)。周四晚些时候，这家科技巨头公布了强于预期的第三季度收益和收入，随后股价上涨。
 
 
 
@@ -39,7 +39,7 @@ The positive reaction comes because Amazon operating income came in strong, anal
 
 
 Operating income was the "main metric everyone was worried about," Stifel analyst Mark Kelley said in a client note. Analysts had been debating how long Amazon could continue the steady profitability boost seen under [Chief Executive Andy Jassy](https://www.investors.com/news/technology/amazon-stock-andy-jassy-ceo-jeff-bezos/). The company is spending billions on chips and new data centers to power its AI ambitions. It is also ramping up spending on its [Project Kuiper satellite internet initiative](https://www.investors.com/news/technology/amazon-stock-downgrade-aws-ecommerce-wells-fargo/).  
-营业收入是“每个人都担心的主要指标”，Stifel 分析师 Mark Kelley 在一份客户报告中表示。分析师一直在争论亚马逊能在[首席执行官安迪·贾西 （Andy Jassy](https://www.investors.com/news/technology/amazon-stock-andy-jassy-ceo-jeff-bezos/)） 的领导下保持稳定的盈利能力提升多久。该公司正在花费数十亿美元购买芯片和新的数据中心，以支持其 AI 雄心。它还在增加其 [Kuiper 卫星互联网计划的](https://www.investors.com/news/technology/amazon-stock-downgrade-aws-ecommerce-wells-fargo/)支出。
+营业收入是“每个人都担心的主要指标”，Stifel 分析师 Mark Kelley 在一份客户报告中表示。分析师一直在争论亚马逊能在[首席执行官安迪·贾西 （Andy Jassy](https://www.investors.com/news/technology/amazon-stock-andy-jassy-ceo-jeff-bezos/)） 的领导下保持稳定的盈利能力增长多久。该公司正在芯片和新数据中心上花费数十亿美元，以支持其人工智能雄心。它还在增加其 [Kuiper 卫星互联网计划的](https://www.investors.com/news/technology/amazon-stock-downgrade-aws-ecommerce-wells-fargo/)支出。
 
 
 But Amazon's Q3 operating income of $17.4 billion cruised past Wall Street estimates of $14.7 billion, according to FactSet.  
