--- a/_columns/Swing_Trading/zh-cn/2024-10-11.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-11.md
@@ -12,7 +12,7 @@ author: JUSTIN NIELSEN
 
 
 Buy low and sell high is often the simple instruction given for stock market success. Or in the case of [IBD Founder William O'Neil](https://www.investors.com/news/william-oneil-legendary-investor-ibd-founder-canslim-creator/), "buy high and sell higher." Swing trading adds another element. Even after a successful trade in a stock, it doesn't mean you can't go back and buy it again. That's what we did with Constellation Energy. Though we got back into CEG stock at a lower price, buying right with this powerful setup was the most important element.  
-低买高卖通常是股市成功的简单指示。或者以 [IBD 创始人 William O'Neil](https://www.investors.com/news/william-oneil-legendary-investor-ibd-founder-canslim-creator/) 为例，“高买高卖”。波段交易增加了另一个元素。即使在股票交易成功后，也不意味着您不能回去再次购买。这就是我们对 Constellation Energy 所做的。尽管我们以较低的价格重新买入 CEG 股票，但使用这种强大的设置正确购买是最重要的因素。
+低买高卖通常是股市成功的简单指示。或者以 [IBD 创始人威廉·奥尼尔 （William O'Neil](https://www.investors.com/news/william-oneil-legendary-investor-ibd-founder-canslim-creator/)） 为例，“高买高卖”。波段交易增加了另一个元素。即使在股票交易成功后，也不意味着您不能回头再次购买。这就是我们对 Constellation Energy 所做的。尽管我们以较低的价格重新买入 CEG 股票，但通过这种强大的设置正确购买是最重要的因素。
 
 
 
@@ -22,19 +22,19 @@ A Strong Catalyst For Constellation星座的强大催化剂
 
 
 There has been plenty of excitement about artificial intelligence, cryptocurrency and electric vehicles in recent years. Less talked about, but getting more apparent, is the tremendous energy these technologies will require.  
-近年来，人工智能、加密货币和电动汽车引起了很多兴奋。人们较少被谈论，但越来越明显的是，这些技术将需要巨大的能量。
+近年来，人工智能、加密货币和电动汽车引起了人们的广泛关注。人们很少被谈论，但越来越明显的是，这些技术将需要巨大的能源。
 
 
 That's where **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) comes in. Its 125% gain for the year puts it right up there with AI giant **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)). After trading below its 50-day line during its summer vacation, CEG stock popped back above the line in mid-September **(1)**.  
-这就是 **Constellation Energy** （[CEG](https://research.investors.com/quote.aspx?symbol=CEG)） 的用武之地。其今年 125% 的涨幅使其与 AI 巨头 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 并驾齐驱。在暑假期间交易低于 50 日线后，CEG 股价在 9 月中旬 **（1）** 重新回到该线上方。
+这就是 **Constellation Energy** （[CEG](https://research.investors.com/quote.aspx?symbol=CEG)） 的用武之地。其今年 125% 的涨幅使其与人工智能巨头**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 并驾齐驱。在暑假期间交易低于 50 天线后，CEG 股价在 9 月中旬重新升至线上方 **（1）。**
 
 
 To put an exclamation point on the importance of power, CEG announced a [20-year contract](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) with **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) to power its data centers **(2)**. Notably, the [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) flew to new highs along with the price.  
-为了强调电力的重要性，CEG 宣布与 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 签订[为期 20 年的合同](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/)，为其数据中心供电 **（2）。**值得注意的是，[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/)随价格飞至新高。
+为了强调电力的重要性，CEG 宣布与 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 签订[为期 20 年的合同](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/)，为其数据中心供电 **（2）。**值得注意的是，[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/)随着价格飙升至新高。
 
 
 Still, the gap-up over 20% held a lot of risk as a buy point. However, as CEG stock held the gains, it became more interesting. Especially after testing the 250 level and finding support **(3)**.  
-尽管如此，超过 20% 的跳空作为买入点具有很大的风险。然而，随着 CEG 股票保持涨幅，它变得更加有趣。尤其是在测试 250 水平并找到支撑 **（3）** 之后。
+尽管如此，超过 20% 的跳空作为买入点存在很大风险。然而，随着 CEG 股票保持涨幅，它变得更加有趣。尤其是在测试 250 水平并找到支撑 **（3）** 之后。
 
 
 
@@ -52,7 +52,7 @@ Still, the gap-up over 20% held a lot of risk as a buy point. However, as CEG st
 
 
 The next day it cleared the highs of the prior two days and it joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as a half position initially **(4)**. Again, the relative strength line confirmed the strength as it reached new highs with the price.  
-第二天，它清除了前两天的高点，最初以半仓位加入 **SwingTrader （4）。**相对强弱线再次证实了强度，因为它随价格创下新高。
+第二天，它清除了前两天的高点，最初以半个位置加入 **SwingTrader （4）。**再次，相对强弱线证实了强度，因为它随价格创下新高。
 
 
 As we immediately got traction on the new buy, we added an additional quarter position later the same day.  
@@ -64,11 +64,11 @@ Locking In Gains While You Have Them在拥有收益时锁定收益
 
 
 Constellation quickly founds its way to a 20% profit zone from its traditional entry and immediately showed a downside reversal **(5)**. We took the opportunity to lock in the gains on our quarter position add just in case weakness followed.  
-Constellation 很快从其传统入场进入 20% 的利润区域，并立即显示出下行反转 **（5）。**我们借此机会锁定了四分之一头寸的收益，以防万一出现疲软。
+Constellation 很快从其传统入场点找到了通往 20% 利润区的道路，并立即显示出下行反转 **（5）。**我们借此机会锁定了季度头寸的收益，以防万一出现疲软。
 
 
 Initially CEG held **(6)**. But it plunged below its 10-day moving average line the next day and undercut the lows of the last few days **(7)**. It was reason enough to take the profits while we had them with an exit at 266.48.  
-最初 CEG 持有 **（6）。**但第二天它跌破了 10 天移动平均线，并削弱了过去几天的低点 **（7）。**这足以让我们获利了结，而我们在 266.48 处退出。
+最初 CEG 持有 **（6）。**但第二天它跌破了 10 天移动平均线，并跌破了过去几天的低点 **（7）。**这有足够的理由获利了结，而我们在 266.48 处退出。
 
 
 Gone But Not Forgotten 逝去但未被遗忘
@@ -76,11 +76,11 @@ Gone But Not Forgotten 逝去但未被遗忘
 
 
 Our exit looked good, especially as Constellation fell another 6.5% over the next couple of days **(8)**. But leading stocks should remain on your radar. At its lows on Friday, CEG stock found support at its 21-day moving average line and quickly reversed.  
-我们的退出看起来不错，尤其是 Constellation 在接下来的几天里又下跌了 6.5% **（8）。**但领先股票应该继续引起您的注意。在周五的低点，CEG 股票在其 21 天移动平均线找到支撑并迅速反转。
+我们的退出看起来不错，尤其是 Constellation 在接下来的几天里又下跌了 6.5% **（8）。**但领先股票应该继续受到您的关注。在周五的低点，CEG 股票在其 21 天移动平均线找到支撑并迅速反转。
 
 
 Upside reversals are one of our favorite setups for swing trading. The low offers an easy place to know when you are wrong and the entry is often early enough to get you a cushion before it hits a traditional buy point. In this case, our reentry into CEG stock was over 3% below our exit price. While it's nice to get back into a stock at a lower price, it was the setup itself that was the decision maker. Buying right is more important than buying low.  
-上行反转是我们最喜欢的波段交易设置之一。低点提供了一个很容易知道您何时出错的地方，并且入场通常足够早，可以在它触及传统的买入点之前为您提供缓冲。在这种情况下，我们重新进入 CEG 股票的价格比我们的退出价格低 3% 以上。虽然以较低的价格重新进入股票是件好事，但决策者是设置本身。正确购买比低买更重要。
+上行反转是我们最喜欢的波段交易设置之一。低点提供了一个很容易知道您何时出错的地方，并且入场通常足够早，可以在它触及传统买入点之前为您提供缓冲。在这种情况下，我们重新进入 CEG 股票的价格比我们的退出价格低 3% 以上。虽然以较低的价格重新进入股票是件好事，但决策者是设置本身。正确购买比低买更重要。
 
 
 *More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
