--- a/_columns/The_Big_Picture/zh-cn/2024-10-31.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-31.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Sells Off As Meta, Microsoft Slide; Apple, Amazon Report Earnings Late	股市抛售，Meta、Microsoft 下滑;苹果、亚马逊延迟报告财报
+  Stock Market Sells Off As Meta, Microsoft Slide; Apple, Amazon Report Earnings Late	股市抛售，Meta、Microsoft 下滑;苹果、亚马逊延迟报告收益
 date: 2024-10-31 17:28 -0700
 author: SCOTT LEHTONEN
 ---
@@ -19,7 +19,7 @@ Indexes fell to or below important chart levels on the eve of the October jobs r
 
 
 Late Thursday, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) traded mixed after both reported earnings after the close. [Amazon climbed](https://www.investors.com/news/technology/amazon-stock-q3-2024-earnings-report-amzn-aws-ai/) 4.5% in extended trading, as [Apple stock](https://www.investors.com/news/technology/apple-stock-aapl-fiscal-q4-2024-earnings/) moved down 1.3%. That provided a small boost to tech futures in overnight trading.  
-周四晚些时候，**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 在收盘后均公布了收益后涨跌互现。[亚马逊在](https://www.investors.com/news/technology/amazon-stock-q3-2024-earnings-report-amzn-aws-ai/)延长交易中上涨 4.5%，而[苹果股](https://www.investors.com/news/technology/apple-stock-aapl-fiscal-q4-2024-earnings/)价下跌 1.3%。这为隔夜交易中的科技期货提供了小幅提振。
+周四晚些时候，**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 在收盘后均公布了收益后涨跌互现。[亚马逊在](https://www.investors.com/news/technology/amazon-stock-q3-2024-earnings-report-amzn-aws-ai/)延长交易中上涨 4.5%，苹果[股](https://www.investors.com/news/technology/apple-stock-aapl-fiscal-q4-2024-earnings/)价下跌 1.3%。这为隔夜交易中的科技期货提供了小幅提振。
 
 
 
@@ -49,7 +49,7 @@ Meanwhile, the Labor Department reported that initial jobless claims unexpectedl
 
 
 Early Friday, the Labor Department is expected to release its October jobs report. Nonfarm payrolls are expected to grow by 125,000 in October, down from September's 254,000 increase, per Econoday.  
-周五早些时候，预计劳工部将发布 10 月份就业报告。根据 Econoday 的数据，预计 10 月份非农就业人数将增加 125,000 人，低于 9 月份的 254,000 人。
+周五早些时候，美国劳工部预计将发布 10 月份就业报告。根据 Econoday 的数据，预计 10 月份非农就业人数将增加 125,000 人，低于 9 月份的 254,000 人。
 
 
 
@@ -71,7 +71,7 @@ Stock Market Today: Meta, Microsoft今日股市：Meta、Microsoft
 
 
 [Shares of Meta Platforms](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/) sold off more than 4% Thursday after the company reported third quarter earnings above expectations, powered by a 19% revenue increase. But Chief Executive Mark Zuckerberg pledged to keep up the company's big spending on artificial intelligence and the metaverse.  
-[Meta Platforms](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/) 周四股价下跌超过 4%，此前该公司公布第三季度收益高于预期，这得益于 19% 的收入增长。但首席执行官马克·扎克伯格 （Mark Zuckerberg） 承诺将继续增加公司在人工智能和元宇宙方面的巨额支出。
+[Meta Platforms 的股价](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/)周四下跌超过 4%，此前该公司公布第三季度收益高于预期，这得益于 19% 的收入增长。但首席执行官马克扎克伯格承诺将继续公司在人工智能和元宇宙方面的大笔支出。
 
 
 Meta stock remains above its 50-day line.  
@@ -79,7 +79,7 @@ Meta 股票仍高于其 50 日线。
 
 
 Meanwhile, [Microsoft topped Wall Street's targets](https://www.investors.com/news/technology/microsoft-stock-msft-fiscal-q1-2025-earnings/) for the software giant's fiscal first quarter on strong cloud computing business. However, Microsoft stock tumbled 6% after the company guided below views for sales in the current quarter. Microsoft shares dived below their 50-day line.  
-与此同时，凭借强劲的云计算业务，Microsoft 在这家软件巨头第一财季的目标[中名列前茅](https://www.investors.com/news/technology/microsoft-stock-msft-fiscal-q1-2025-earnings/)。然而，Microsoft 股价下跌 6%，此前该公司对本季度的销售数据指引如下。Microsoft 股价跌破 50 日线。
+与此同时，Microsoft 凭借强劲的云计算业务[，超过了华尔街对](https://www.investors.com/news/technology/microsoft-stock-msft-fiscal-q1-2025-earnings/)这家软件巨头第一财季的目标。然而，Microsoft 股价下跌 6%，此前该公司对本季度的销售观点指引如下。Microsoft 股价跌破 50 日线。
 
 
 The two stocks account for about 9% of the S&P 500 index.  
@@ -91,7 +91,7 @@ Dow Jones Winners And Losers道琼斯赢家和输家
 
 
 In the Dow Jones index, **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) were the among biggest decliners Thursday with losses of 3.5% and 3.2%, respectively, on the stock market today. Intel jumped on [earnings late Thursday](https://www.investors.com/news/technology/intel-stock-intc-q3-2024-earnings/).  
-在道琼斯指数中，**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 是周四跌幅最大的股票之一，今天股市分别下跌 3.5% 和 3.2%。英特尔[周四晚些时候公布了财报](https://www.investors.com/news/technology/intel-stock-intc-q3-2024-earnings/)。
+在道琼斯指数中，**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 是周四跌幅最大的股票之一，今天股市分别下跌 3.5% 和 3.2%。英特尔[周四晚些时候财报](https://www.investors.com/news/technology/intel-stock-intc-q3-2024-earnings/)上涨。
 
 
 On the upside, **Verizon Communications** ([VZ](https://research.investors.com/quote.aspx?symbol=VZ)) and **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) were the Dow winners during the session, up 2.1% and 1.5%, respectively. Amgen reported [Q3 results](https://www.investors.com/news/technology/amgen-stock-amgen-earnings-q3-2024/) Wednesday evening.  
