--- a/_columns/The_Big_Picture/zh-cn/2024-11-01.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-01.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Trims Gains, Ends Week Lower; Elections, Fed Meeting Due	股市回吐涨幅，本周收盘走低;选举，美联储会议到期
+  Stock Market Trims Gains, Ends Week Lower; Elections, Fed Meeting Due	股市回吐涨幅，本周收低;选举，美联储会议即将召开
 date: 2024-11-01 17:35 -0700
 author: MICHAEL LARKIN
 ---
@@ -11,11 +11,11 @@ author: MICHAEL LARKIN
 
 
 The stock market ended Friday higher following a weak jobs report but booked weekly losses. Now the U.S. elections as well as the next Fed decision on interest rates loom for investors.  
-在疲软的就业报告公布后，股市周五收高，但每周录得下跌。现在，美国大选以及美联储的下一个利率决定对投资者来说迫在眉睫。
+在疲软的就业报告之后，股市周五收高，但每周录得损失。现在，美国大选以及美联储的下一个利率决定对投资者来说迫在眉睫。
 
 
 The Nasdaq composite saw early gains fade as it closed 0.8% higher. This was not enough to stop the tech-heavy index suffering a weekly decline of 1.5%, snapping a seven-week win streak in the process. It hit resistance at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) but sits 1.6% above its [50-day line.](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) The index remains up 21.5% in 2024.  
-纳斯达克综合指数早盘涨幅回落，收盘上涨 0.8%。这不足以阻止以科技股为主的指数每周下跌 1.5%，在此过程中结束了连续七周的上涨。它在 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)处触及阻力位，但比 [50 天线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)高出 1.6%。该指数在 2024 年仍上涨 21.5%。
+纳斯达克综合指数早盘涨幅回落，收盘上涨 0.8%。这不足以阻止以科技股为主的指数每周下跌 1.5%，在此过程中结束了连续七周的上涨。它在 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)处遇到阻力，但比 [50 天线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)高出 1.6%。该指数在 2024 年仍上涨 21.5%。
 
 
 
@@ -37,7 +37,7 @@ The Dow Jones Industrial Average rose 0.7% Friday but turned in a weekly dip of 
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP110124-274x300.jpg)Small caps raced out of the gate on the stock market, but the Russell 2000 saw gains fade to 0.6% Friday as it ended nearly flat for the week. Growth stocks were solid, with the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) clambering back above its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/) after popping 0.9%.  
-小盘股在股市上飙升，但罗素 2000 指数周五的涨幅回落至 0.6%，本周收盘几乎持平。成长型股票表现稳健，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 在上涨 0.9% 后回升至 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/)上方。
+小盘股在股市上飞速出局，但罗素 2000 指数周五的涨幅回落至 0.6%，本周收盘几乎持平。成长型股票表现稳健，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 在上涨 0.9% 后回升至 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/)上方。
 
 
 Trump-Harris Election, Fed Meeting Next特朗普-哈里斯大选，美联储会议
