--- a/_columns/Swing_Trading/zh-cn/2024-10-04.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-04.md
@@ -12,11 +12,11 @@ author: JUSTIN NIELSEN
 
 
 If a friend treated you poorly enough times, you might feel like ending the relationship. Or at least limit the time you spend together. But as much as we ascribe human characteristics to our stocks, they are not people. Which is why Spotify got multiple chances this year even though it didn't work out a number of times.  
-如果朋友对你不好的次数足够多，你可能会想结束这段关系。或者至少限制你们在一起的时间。但是，尽管我们将人类特征归因于我们的种群，但它们不是人。这就是为什么 Spotify 今年获得了多次机会，尽管它多次都没有成功。
+如果朋友对你不好的次数足够多，你可能会想结束这段关系。或者至少限制你们在一起的时间。但是，尽管我们将人类特征归因于我们的股票，但它们不是人。这就是为什么 Spotify 今年获得了多次机会，尽管它没有成功过几次。
 
 
 **Spotify Technology** ([SPOT](https://research.investors.com/quote.aspx?symbol=SPOT)) gave us a 10%-plus trade earlier this year as [its moving average lines converged](https://www.investors.com/research/swing-trading/spotify-stock-moving-averages-converge/). We tried it seven more times since then with many of the results leading to small gains or small losses. But it's often worth it to keep trying if a stock doesn't break down and the setups are still there.  
-**Spotify Technology** （[SPOT）](https://research.investors.com/quote.aspx?symbol=SPOT) 今年早些时候给了我们 10% 以上的交易，因为[其移动平均线收敛](https://www.investors.com/research/swing-trading/spotify-stock-moving-averages-converge/)了。从那时起，我们又尝试了七次，许多结果导致小额收益或小额损失。但是，如果一只股票没有坏掉并且设置仍然存在，那么继续尝试通常是值得的。
+**Spotify Technology** （[SPOT）](https://research.investors.com/quote.aspx?symbol=SPOT) 今年早些时候为我们提供了 10% 以上的交易，因为[其移动平均线收敛](https://www.investors.com/research/swing-trading/spotify-stock-moving-averages-converge/)。从那时起，我们又尝试了七次，许多结果导致小额收益或小额亏损。但是，如果一只股票没有崩溃并且设置仍然存在，那么继续尝试通常是值得的。
 
 
 
@@ -26,7 +26,7 @@ Summer Shakeouts For Spotify StockSpotify 股票的夏季淘汰赛
 
 
 After a strong gap-up on its latest earnings report, Spotify gained our interest again. It pulled back slightly, losing little of its gains and then quickly rebounded **(1)**. The relative strength line hitting a new high added conviction. Plus the S&P 500 had a [follow-through](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/) that day. It was enough for us to start a full position in Spotify on [SwingTrader](https://swingtrader.investors.com/#/).  
-在最新的财报大幅跳空上涨后，Spotify 再次引起了我们的兴趣。它略微回落，损失了很少的收益，然后迅速反弹 **（1）。**相对强弱线创下新高，增加了信念。此外，标准普尔 500 指数当天也有[后续表现](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/)。对我们来说，在 [SwingTrader](https://swingtrader.investors.com/#/) 上的 Spotify 中开始完整头寸就足够了。
+在最新收益报告大幅跳空上涨后，Spotify 再次引起了我们的兴趣。它略微回落，损失了很少的收益，然后迅速反弹 **（1）。**相对强弱线创下新高，增加了信念。此外，标准普尔 500 指数当天有[后续](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/)行动。对我们来说，在 [SwingTrader](https://swingtrader.investors.com/#/) 上开始 Spotify 的完整头寸就足够了。
 
 
 The 5% jump at the highs the next day looked like we made a good decision, but then it quickly reversed and we exited later the same day with a loss **(2)**. Downside reversals of that magnitude are a big warning sign and exiting prevented us from taking an even larger loss if we had held.  
@@ -34,7 +34,7 @@ The 5% jump at the highs the next day looked like we made a good decision, but t
 
 
 A dramatic upside reversal on Aug. 5 breached the 50-day line. When we saw a follow-up to the reversal, we tried Spotify again **(3)**. A similar downside reversal happened the next day **(4)**. This time we exited a little quicker in order to keep the trade positive. Instead of falling further, the stock recovered and kept going without us.  
-8 月 5 日的戏剧性上行逆转突破了 50 日线。当我们看到逆转的后续行动时，我们再次尝试了 Spotify **（3）。**类似的下行反转发生在第二天 **（4）。**这一次，我们退出得更快一些，以保持交易积极。股票没有进一步下跌，而是恢复了并在没有我们的情况下继续上涨。
+8 月 5 日的戏剧性上行逆转突破了 50 天线。当我们看到逆转的后续行动时，我们再次尝试了 Spotify **（3）。**第二天也发生了类似的下行逆转 **（4）。**这一次，我们退出得更快一些，以保持交易积极。股票没有进一步下跌，而是在没有我们的情况下恢复并继续上涨。
 
 
 
@@ -52,7 +52,7 @@ A dramatic upside reversal on Aug. 5 breached the 50-day line. When we saw a fol
 
 
 We attempted to get back in a couple weeks later **(5)** but the stock never launched. After more than a week without progress we exited Spotify again before the trade went negative **(6)**.  
-我们试图在几周后 **（5）** 恢复，但股票从未推出。在一个多星期没有进展后，我们在交易变为负值之前再次退出了 Spotify **（6）。**
+我们试图在几周后恢复 **（5），**但该股从未推出。在一个多星期没有进展后，我们在交易变为负值之前再次退出了 Spotify **（6）。**
 
 
 Fourth Time's A Charm 第四次的魅力
@@ -60,15 +60,15 @@ Fourth Time's A Charm 第四次的魅力
 
 
 Hadn't we had enough? Three weeks later, we tried Spotify again **(7)**. A strong gap up and a relative strength line at new highs enticed us to start a half position that we brought to a full position in short order. Recognizing increased volatility, we started locking in profits quickly **(8)** and exited completely just over a week from our entry **(9)**. The trade was good for a quick 3.8% and gave us another win under our belt.  
-我们还不够吗？三周后，我们再次尝试了 Spotify **（7）。**强劲的向上跳空和新高的相对强弱线吸引我们开始一个半仓，我们在短时间内将其带到了满仓。认识到波动性增加，我们开始迅速锁定利润 **（8），**并在入场后一周多一点 **（9）** 完全退出。这笔交易很快就赚了 3.8%，让我们又赢了。
+我们还没有吃够吗？三周后，我们再次尝试了 Spotify **（7）。**强劲的向上跳空和新高的相对强弱线吸引我们开始半仓，我们在短时间内将其变为满仓。认识到波动性增加，我们开始迅速锁定利润 **（8），**并在入场一周多后完全退出 **（9）。**这笔交易很快就达到了 3.8%，让我们再次获胜。
 
 
 This was actually the 11th trade in Spotify since 2020 for a collective gain of over 40%. Three of the trades were losses. Four produced gains of less than 1%.  
-这实际上是自 2020 年以来 Spotify 的第 11 笔交易，集体收益超过 40%。其中 3 笔交易亏损。4 个的收益不到 1%。
+这实际上是自 2020 年以来 Spotify 的第 11 笔交易，集体收益超过 40%。其中 3 笔交易亏损。4 笔的收益不到 1%。
 
 
 Of the four that worked, they more than made up for the ones that didn't. By keeping losses small, you give yourself the luxury of multiple attempts. Just one of those that turn into a big hit can make solid portfolio progress.  
-在奏效的 4 个项目中，它们弥补了无效的通过保持较小的损失，您可以给自己多次尝试的奢侈。其中只有一个变成大热门的可以使投资组合取得坚实的进展。
+在四个有效的项目中，它们弥补了那些无效的。通过保持较小的损失，您可以给自己多次尝试的奢侈。只要其中一次变成大热门，就可以使投资组合取得坚实的进展。
 
 
 *More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
