--- a/_columns/Swing_Trading/zh-cn/2024-11-01.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-01.md
@@ -12,7 +12,7 @@ author: JUSTIN NIELSEN
 
 
 Indexes ran into some trouble this week as they plunged below their [21-day exponential moving averages](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). It's a reminder how booking some profits when you have them can help weather some of these storm clouds. **Clear Secure** ([YOU](https://research.investors.com/quote.aspx?symbol=YOU)) wasn't broken by any means and isn't far from all-time highs. But exiting when we did avoided getting shaken out of Clear Secure stock at a worse price.  
-指数本周遇到了一些麻烦，因为它们跌破了 [21 天的指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。这提醒我们，当你有利润时，预订一些利润如何帮助度过其中一些风暴云。**Clear Secure** （[YOU](https://research.investors.com/quote.aspx?symbol=YOU)） 没有以任何方式被打破，距离历史高点不远了。但是当我们退出时退出，可以避免以更糟糕的价格从 Clear Secure 股票中被淘汰。
+指数本周遇到了一些麻烦，因为它们跌破了 [21 天的指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。这提醒我们，当你拥有一些利润时，预订一些利润如何帮助度过其中一些风暴云。**Clear Secure** （[YOU）](https://research.investors.com/quote.aspx?symbol=YOU) 没有以任何方式被打破，距离历史高点不远。但是当我们退出时退出，避免了以更糟糕的价格从 Clear Secure 股票中被淘汰。
 
 
 
@@ -26,7 +26,7 @@ Want to improve your sell decisions? One of the best things you can do is improv
 
 
 With Clear Secure, our entry on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) came after the stock retook its [21-day line](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **(1)**. YOU stock cleared the highs of the previous four days, including the day it dipped below the 21-day. We started with a half position and then as it cleared resistance around 33, we added to the position **(2)**.  
-有了 Clear Secure，我们在股票重新夺回 [21 天线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **（1）** 后进入 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。YOU 股票清除了前四天的高点，包括跌破 21 天的高点。我们从半位开始，然后当它在 33 附近清除阻力位时，我们增加了位置 **（2）。**
+使用 Clear Secure，我们在该股重新夺回 [21 天线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) **（1）** 后进入 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。YOU 股票清除了前四天的高点，包括跌破 21 天高点的那一天。我们从半个位置开始，然后当它在 33 附近清除阻力位时，我们增加了位置 **（2）。**
 
 
 
