--- a/_columns/The_Big_Picture/zh-cn/2024-10-30.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-30.md
@@ -15,7 +15,7 @@ The stock market closed lower after a flurry of earnings reports, although Wedne
 
 
 The Nasdaq composite fell nearly 0.6% in a day in which techs were the weakest sector. The Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)) slid 3.7%, more than wiping out Tuesday's 1.4% gain. Much of the sector's weakness was in semiconductors, after **Advanced Micro Devices**' ([AMD](https://research.investors.com/quote.aspx?symbol=AMD)) [weak outlook](https://www.investors.com/news/technology/amd-stock-advanced-micro-devices-q3-2024-earnings/) shook the chip sector.  
-纳斯达克综合指数在一天内下跌了近 0.6%，其中科技股是最弱的板块。科技精选板块 SPDR （[XLK](https://research.investors.com/quote.aspx?symbol=XLK)） 下跌 3.7%，超过抹去周二 1.4% 的涨幅。该行业的大部分疲软来自半导体，此前 **AMD** [的](https://research.investors.com/quote.aspx?symbol=AMD)[疲软前景](https://www.investors.com/news/technology/amd-stock-advanced-micro-devices-q3-2024-earnings/)震动了芯片行业。
+纳斯达克综合指数下跌近 0.6%，其中科技股是最弱的板块。科技精选板块 SPDR （[XLK](https://research.investors.com/quote.aspx?symbol=XLK)） 下跌 3.7%，超过抹去周二 1.4% 的涨幅。该行业的大部分疲软来自半导体，此前 **Advanced Micro Devices** （[AMD）](https://research.investors.com/quote.aspx?symbol=AMD) [的疲软前景](https://www.investors.com/news/technology/amd-stock-advanced-micro-devices-q3-2024-earnings/)震动了芯片板块。
 
 
 
@@ -29,11 +29,11 @@ The S&P 500 reversed lower 0.3% and is practically back at the same spot it was 
 
 
 Most of the selling occurred in afternoon trading. Declining stocks topped advancers by about a 3-2 ratio on the Nasdaq, but winners slightly beat losers on the NYSE.  
-大部分抛售发生在下午交易中。在纳斯达克指数中，下跌的股票以大约 3-2 的比率领先于上涨的股票，但在纽约证券交易所，赢家略微超过输家。
+大部分抛售发生在下午交易中。纳斯达克下跌的股票以约 3-2 的比率领先于上涨的股票，但纽约证券交易所的赢家略高于输家。
 
 
 The IBD 50 index underperformed the stock market with a 0.8% drop. **Hims & Hers** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) plunged more than 14%. The online provider of wellness products may have fallen in sympathy with **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)), whose [sales of weight-loss drugs missed expectations.](https://www.investors.com/news/technology/eli-lilly-stock-eli-lilly-earnings-diabetes-weight-loss-drugs/)  
-IBD 50 指数表现逊于股市，下跌 0.8%。**Hims & Hers** （[HIMSs](https://research.investors.com/quote.aspx?symbol=HIMS)） 暴跌超过14%。这家在线健康产品提供商可能已经对礼**来** （[LLY](https://research.investors.com/quote.aspx?symbol=LLY)） 表示同情，后者[的减肥药销量低于预期。](https://www.investors.com/news/technology/eli-lilly-stock-eli-lilly-earnings-diabetes-weight-loss-drugs/)
+IBD 50指数表现逊于股市，下跌0.8%。**Hims & Hers** （[HIMS）](https://research.investors.com/quote.aspx?symbol=HIMS) 暴跌超过 14%。这家在线健康产品提供商可能已经对礼**来** （[LLY](https://research.investors.com/quote.aspx?symbol=LLY)） 表示同情，后者[的减肥药销售低于预期。](https://www.investors.com/news/technology/eli-lilly-stock-eli-lilly-earnings-diabetes-weight-loss-drugs/)
 
 
 After Wednesday's close, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) and **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) were the latest Magnificent Seven companies to announce earnings. Microsoft beat profit expectations and shares rose about 1% in extended trading. But Meta fell more than 2%.  
